# webpipelines

./: .gitignore  README.md  nginx_locations.conf  paradigm_languages.txt
api_tester/: Cargo.toml  Readme.md
api_tester/src/: main.rs
back/: .env.default  .gitignore  Cargo.toml  Containerfile  Dockerfile  Justfile  Makefile  Readme.md  get_nonapnightly_files.py  langmodel_files.yaml  query.py
back/assets/: index.html  openapi.yaml
back/assets/docs/: index.html
back/sme_numbers/: transcriptor-abbrevs2text.filtered.lookup.hfstol  transcriptor-clock-digit2text.filtered.lookup.hfstol  transcriptor-clock-text2digit.filtered.lookup.hfstol  transcriptor-date-digit2text.filtered.lookup.hfstol  transcriptor-date-text2digit.filtered.lookup.hfstol  transcriptor-numbers-digit2text.filtered.lookup.hfstol  transcriptor-numbers-text2digit.filtered.lookup.hfstol  transcriptor-text2abbrevs.filtered.lookup.hfstol
back/src/: analysis.rs  async_watcher.rs  common_url.rs  file_watcher.rs  langmodel_files.rs  langmodel_files.yaml  main.rs  memmem_split.rs  multimap.rs  paradigm.rs  timing.rs  util.rs  utils.rs  weight.rs
back/src/endpoints/: mod.rs
back/src/grammarcheck/: mod.rs
back/src/pipelines/: analyze.rs  dependency.rs  disambiguate.rs  full_analysis.rs  generate.rs  grammarcheck.rs  hyphenate.rs  lemma_count.rs  mod.rs  numbers.rs  paradigm.rs  transcribe.rs  unknown_in_x_by_freq.rs
client/: .gitignore  .prettierrc  Dockerfile  Justfile  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
client/locale_data/: eng.json  fin.json  make_final.py  nob.json  readme.txt  rus.json  sme.json  xmltojson.py
client/locale_data/data/: caneng.dtd  cansme.dtd  cgi-eng.xml  cgi-index.xsl  cgi-index.xsl.js  cgi-nob.xml  cgi-rus.xml  cgi-sme.xml  cgi-translations.dtd  index-eng.xml  new-eng.xml  new-fin.xml  new-nob.xml  new-sme.xml
client/messages/: eng.json  nob.json  sme.json
client/project.inlang/: project_id  settings.json
client/src/: app.css  app.html  hooks.js  hooks.server.ts
client/src/components/: AppBar.svelte  ErrorBox.svelte  Footer.svelte  FormWrapper.svelte  LangSelector.svelte  LocaleSelector.svelte  MobileSideBar.svelte  Paradigm.svelte  ParadigmForm.svelte  ParadigmList.svelte  ParadigmTable.svelte  ParadigmText.svelte  ParadigmWrapper.svelte  RadioGroup.svelte  Search.svelte  SelectLocale.svelte  Switch.svelte  Table.svelte  TableConstructor.svelte  TextArea.svelte  TextForm.svelte  ToolDescription.svelte  WordInput.svelte
client/src/components/tables/: sme_paradigm.svelte  sme_paradigm_options.ts
client/src/components/tables/sme/: Adjective.svelte  Noun.svelte  Numeral.svelte  Pronoun.svelte  Verb.svelte  sme_paradigm_options.ts
client/src/lib/: langnames.js  langnames.ts  langs.js  langs.ts  locales.js  locales.ts  parsers.ts  utils.js  utils.ts
client/src/lib/paradigms/: json_converter.ts  locale_map.ts  paradigm_schema.json  paradigm_utils.ts  registry.ts  types.ts
client/src/lib/paradigms/fin/: adjective.ts  adjective_ord.ts  helpers.ts  index.ts  noun.ts  numeral.ts  pronoun_dem.ts  pronoun_interr.ts  pronoun_qu.ts  pronoun_recipr.ts  pronoun_refl.ts  pronoun_rel.ts
client/src/lib/paradigms/fit/: adjective.ts  helpers.ts  index.ts  noun.ts  numeral.ts  pronoun_rel.ts  verb.ts
client/src/lib/paradigms/fkv/: adjective.jsonc  adjective.ts  adjective_ord.ts  fkv_paradigm_options.ts  helpers.ts  index.ts  noun.ts  numeral.ts  pronoun_dem.ts  pronoun_indef.ts  pronoun_interr.ts  pronoun_pers.jsonc  pronoun_pers.ts  pronoun_qu.ts  pronoun_recipr.jsonc  pronoun_recipr.ts  pronoun_refl.ts  pronoun_rel.ts  verb.jsonc  verb.ts  verb_neg.jsonc  verb_neg.ts
client/src/lib/paradigms/olo/: adjective.ts  adjective_ord.ts  helpers.ts  helpers.ts~  index.ts  index.ts~  noun.ts  noun.ts~  numeral.ts  pronoun_dem.ts  pronoun_interr.ts  pronoun_qu.ts  pronoun_recipr.ts  pronoun_refl.ts  pronoun_rel.ts  verb.ts  verb.ts~  verb_neg.ts  verb_neg.ts~
client/src/lib/paradigms/sma/: adjective.jsonc  adjective.ts  adjective_ord.jsonc  adjective_ord.ts  helpers.ts  index.ts  noun.jsonc  noun.ts  numeral.jsonc  numeral.ts  pronoun_dem.ts  pronoun_indef.jsonc  pronoun_indef.ts  pronoun_interr.jsonc  pronoun_interr.ts  pronoun_pers.jsonc  pronoun_pers.ts  pronoun_recipr.jsonc  pronoun_recipr.ts  pronoun_refl.jsonc  pronoun_refl.ts  pronoun_rel.ts  verb.jsonc  verb.ts  verb_neg.jsonc  verb_neg.ts
client/src/lib/paradigms/sme/: adjective.jsonc  adjective.ts  adjective_ord.jsonc  adjective_ord.ts  helpers.ts  index.ts  noun.jsonc  noun.ts  numeral.ts  pronoun_dem.ts  pronoun_indef.jsonc  pronoun_indef.ts  pronoun_interr.ts  pronoun_pers.jsonc  pronoun_pers.ts  pronoun_refl.jsonc  pronoun_refl.ts  pronoun_rel.jsonc  pronoun_rel.ts  verb.jsonc  verb.ts  verb_neg.jsonc  verb_neg.ts
client/src/lib/paradigms/smj/: adjective.ts  adjective_ord.ts  helpers.ts  index.ts  noun.ts  numeral.ts  pronoun_dem.ts  pronoun_indef.ts  pronoun_interr.ts  pronoun_pers.ts  pronoun_refl.ts  pronoun_rel.ts  verb.ts
client/src/lib/paradigms/smn/: adjective.ts  adjective_ord.ts  helpers.ts  (+11 more)
client/src/locales/: README  eng.js  eng.json  eng.ts  fin.ts  nob.ts  rus.ts  sme.ts
client/src/locales/data/: cannob.dtd  index-nob.xml  new-fin.xml
client/src/locales/generation/: eng.json  sme.json
client/src/params/: langs.ts
client/src/routes/: +error.svelte  +layout.svelte  +page.svelte  styles.css  styles.css.old
client/src/routes/[lang=langs]/: +layout.svelte  +page.svelte
client/src/routes/[lang]/: +layout.svelte  +page.js  +page.svelte
client/src/routes/about/: +page.svelte
client/src/routes/developers/: +page.svelte
client/src/routes/lemmacount/: +layout.svelte  +page.server.ts  +page.svelte
client/src/routes/unknown-lemmas/: +layout.svelte  +page.server.ts  +page.svelte
front/: Dockerfile  Makefile  README.md  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js
front/src/: app.html
front/src/lib/: index.js
front/src/routes/: +layout.svelte  +page.svelte
front/src/routes/lemmalist/: +page.svelte
(+58 files in other folders)
