[package]
name = "webpipeline"
version = "0.1.0"
edition = "2021"
authors = [
    "Anders Lorentsen <anders.lorentsen@uit.no>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
base64 = "0.21.4"
cached = "0.46.0"
cmd_lib = "1.3.0"
docx-rs = "0.4.7"
dotenv = "0.15.0"
listenfd = "1.0.1"
flate2 = "1.0.27"
http = "0.2.9"
hyper = { version = "0.14", features = ["full"] }
newline-converter = "0.3"
once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
tempfile = "3.8.0"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["limit", "load-shed", "timeout", "buffer", "util"] }
tower-http = { version = "0.4.4", features = ["cors", "fs", "trace", "catch-panic"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# validator = { version = "0.16.1", features = ["derive"] }
